--- a/package.json
+++ b/package.json
@@ -13,13 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.4.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "next": "^14.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "^0.182.0"
+    "react-dom": "^18.2.0"
   }
 }
